--- a/eatgo-common/build.gradle
+++ b/eatgo-common/build.gradle
@@ -25,7 +25,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'com.h2database:h2'
+
+    implementation("com.google.guava:guava:29.0-jre")
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
