Add: add UsernameAndPasswordAuthenticationFilter to login

--- a/eatgo-login-api/src/main/resources/application.yml
+++ b/eatgo-login-api/src/main/resources/application.yml
@@ -8,8 +8,12 @@ spring:
     hibernate:
       ddl-auto: update
 
-jwt:
-  secret: 12345678901234567890123456789012
+application:
+  jwt:
+    secretKey: securesecuresecuresecuresecuresecuresecure
+    authorizationHeader: Authorization
+    tokenPrefix: Bearer
+    tokenExpirationAfterDays: 10
 
 ---
 
