Create: create JWT Token Verifier for each request

--- a/eatgo-admin-api/src/main/resources/application.yml
+++ b/eatgo-admin-api/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
     hibernate:
       ddl-auto: update
 
+application:
+  jwt:
+    secretKey: securesecuresecuresecuresecuresecuresecure
+    authorizationHeader: Authorization
+    tokenPrefix: Bearer
+    tokenExpirationAfterDays: 10
+
 ---
 
 spring:
