--- a/eatgo-common/src/main/resources/application.yml
+++ b/eatgo-common/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/eatgo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+    username: root
+    password: Dnjscksdn98@
+  jpa:
+    show-sql: true
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
 application:
   jwt:
     secretKey: securesecuresecuresecuresecuresecuresecure
