--- a/eatgo-common/src/main/resources/application.yml
+++ b/eatgo-common/src/main/resources/application.yml
@@ -1,8 +1,11 @@
+server:
+  port: 8181
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/eatgo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
-    password: Dnjscksdn98@
+    password: root
   jpa:
     show-sql: true
   jackson:
