--- a/eatgo-login-api/src/main/resources/application.yml
+++ b/eatgo-login-api/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/eatgo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
-    password: Dnjscksdn98@
+    password: root
   jpa:
     show-sql: true
   jackson:
