--- a/eatgo-login-api/src/main/resources/application.yml
+++ b/eatgo-login-api/src/main/resources/application.yml
@@ -17,3 +17,12 @@ application:
     authorizationHeader: Authorization
     tokenPrefix: Bearer
     tokenExpirationAfterDays: 10
+
+---
+
+spring:
+  profiles: mysql
+  datasource:
+    url: jdbc:mysql://${MYSQL_HOST}:13306/${MYSQL_DATABASE}
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
