--- a/eatgo-restaurant-api/build.gradle
+++ b/eatgo-restaurant-api/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.1.11.RELEASE'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
