--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,59 @@
 version: '3'
 services:
-  mysql:
-    image: mysql:8.0.20
-    env_file: .env
+  mysql-standalone:
+    image: mysql:5.7
     volumes:
       - ./data/mysql:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=eatgo
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+
+  eatgo-customer-api:
+    image: eatgo-customer-api:1.0.0
     ports:
-      - 13306:3306
-    command: |
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_unicode_ci
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 10
-  login-api:
-    image: openjdk:8
-    env_file: .env
-    volumes:
-      - ./run.sh:/home/eatgo/run.sh
-      - ./eatgo-login-api/build/libs:/home/eatgo/libs
-    ports:
-      - 8001:8181
+      - 8080:8080
+    build:
+      context: ./eatgo-customer-api
+      args:
+        ENVIRONMENT: prod
+      dockerfile: Dockerfile
     depends_on:
-      - mysql
-    command: bash -c "cd /home/eatgo && sh run.sh"
-  admin-api:
-    image: openjdk:8
-    env_file: .env
-    volumes:
-      - ./run.sh:/home/eatgo/run.sh
-      - ./eatgo-admin-api/build/libs:/home/eatgo/libs
+      - mysql-standalone
+
+  eatgo-login-api:
+    image: eatgo-login-api:1.0.0
     ports:
-      - 8002:8181
+      - 8081:8080
+    build:
+      context: ./eatgo-login-api
+      args:
+        ENVIRONMENT: prod
+      dockerfile: Dockerfile
     depends_on:
-      - mysql
-    command: bash -c "cd /home/eatgo && sh run.sh"
-  customer-api:
-    image: openjdk:8
-    env_file: .env
-    volumes:
-      - ./run.sh:/home/eatgo/run.sh
-      - ./eatgo-customer-api/build/libs:/home/eatgo/libs
+      - mysql-standalone
+
+  eatgo-restaurant-api:
+    image: eatgo-restaurant-api:1.0.0
     ports:
-      - 8003:8181
+      - 8082:8080
+    build:
+      context: ./eatgo-restaurant-api
+      args:
+        ENVIRONMENT: prod
+      dockerfile: Dockerfile
     depends_on:
-      - mysql
-    command: bash -c "cd /home/eatgo && sh run.sh"
-  restaurant-api:
-    image: openjdk:8
-    env_file: .env
-    volumes:
-      - ./run.sh:/home/eatgo/run.sh
-      - ./eatgo-restaurant-api/build/libs:/home/eatgo/libs
+      - mysql-standalone
+
+  eatgo-admin-api:
+    image: eatgo-admin-api:1.0.0
     ports:
-      - 8004:8181
+      - 8083:8080
+    build:
+      context: ./eatgo-admin-api
+      args:
+        ENVIRONMENT: prod
+      dockerfile: Dockerfile
     depends_on:
-      - mysql
-    command: bash -c "cd /home/eatgo && sh run.sh"
+      - mysql-standalone
