--- a/eatgo-restaurant-api/src/main/resources/application.yml
+++ b/eatgo-restaurant-api/src/main/resources/application.yml
@@ -1,13 +1,15 @@
-server:
-  port: 8181
-
 spring:
+  profiles:
+    active: dev
+
   datasource:
     url: jdbc:mysql://localhost:3306/eatgo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
     password: root
+
   jpa:
     show-sql: true
+
   jackson:
     property-naming-strategy: SNAKE_CASE
 
@@ -17,12 +19,3 @@ application:
     authorizationHeader: Authorization
     tokenPrefix: Bearer
     tokenExpirationAfterDays: 10
-
----
-
-spring:
-  profiles: mysql
-  datasource:
-    url: jdbc:mysql://${MYSQL_HOST}:13306/${MYSQL_DATABASE}
-    username: ${MYSQL_USER}
-    password: ${MYSQL_PASSWORD}
