--- a/eatgo-admin-api/build.gradle
+++ b/eatgo-admin-api/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
 	compile 'mysql:mysql-connector-java'
 
+	runtimeOnly group: 'com.h2database', name: 'h2', version: '1.4.197'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
