--- a/eatgo-login-api/build.gradle
+++ b/eatgo-login-api/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     compile 'mysql:mysql-connector-java'
 
+    runtimeOnly group: 'com.h2database', name: 'h2', version: '1.4.197'
+
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
 
