--- a/eatgo-restaurant-api/src/main/resources/application.yml
+++ b/eatgo-restaurant-api/src/main/resources/application.yml
@@ -1,14 +1,27 @@
+server:
+  port: 8082
+
 spring:
   profiles:
     active: dev
 
+  devtools:
+    restart:
+      enabled: true
+
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+
   datasource:
-    url: jdbc:mysql://localhost:3306/eatgo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    username: root
-    password: root
+    url: jdbc:h2:~/database/eatgo;AUTO_SERVER=TRUE
 
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
 
   jackson:
     property-naming-strategy: SNAKE_CASE
