--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'eatgo-customer-api'
 include 'eatgo-login-api'
 include 'eatgo-restaurant-api'
 include 'eureka-server'
+include 'zuul-api-gateway'
 
